Fix view height mobile overlapping

--- a/public/global.css
+++ b/public/global.css
@@ -4,11 +4,6 @@
 	box-sizing: border-box;
 }
 
-body {
-	padding: 0;
-	height: 100vh;
-}
-
 .ss-container {
 	margin-left: auto;
 	margin-right: auto;
